--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,6 +18,7 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
+  width: 100dvw;
   overflow-x: hidden;
   overflow-y: scroll;
   background-attachment: fixed;
